@@ -20,42 +20,42 @@
 # with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-bin_PROGRAMS = riscv-gdbserver
+bin_PROGRAMS = riscv32-gdbserver
 
-riscv_gdbserver_SOURCES = AbstractConnection.cpp \
-                          AbstractConnection.h   \
-                          Disassembler.h         \
-                          Disassembler.cpp       \
-                          GdbServer.cpp          \
-                          GdbServer.h            \
-                          GdbServerImpl.cpp      \
-                          GdbServerImpl.h        \
-		          main.cpp               \
-                          MpHash.cpp             \
-                          MpHash.h               \
-                          RspConnection.cpp      \
-                          RspConnection.h        \
-                          RspPacket.cpp          \
-                          RspPacket.h            \
-                          StreamConnection.cpp   \
-                          StreamConnection.h     \
-                          Utils.cpp              \
-                          Utils.h
+riscv32_gdbserver_SOURCES = AbstractConnection.cpp \
+                            AbstractConnection.h   \
+                            Disassembler.h         \
+                            Disassembler.cpp       \
+                            GdbServer.cpp          \
+                            GdbServer.h            \
+                            GdbServerImpl.cpp      \
+                            GdbServerImpl.h        \
+		            main.cpp               \
+                            MpHash.cpp             \
+                            MpHash.h               \
+                            RspConnection.cpp      \
+                            RspConnection.h        \
+                            RspPacket.cpp          \
+                            RspPacket.h            \
+                            StreamConnection.cpp   \
+                            StreamConnection.h     \
+                            Utils.cpp              \
+                            Utils.h
 
 # For now. Link in the common binaries (we only need these from one model) and
 # the actual models.
 
-riscv_gdbserver_LDADD = ../targets/libtargets.la                   \
-                        ../trace/libtrace.la                       \
-                        @MDIR_RI5CY@/verilated.o                   \
-                        @MDIR_RI5CY@/verilated_vcd_c.o             \
-                        @MDIR_RI5CY@/verilated_dpi.o               \
-                        @MDIR_RI5CY@/V@MODNAME_RI5CY@__ALL.a       \
-                        -L$(BINUTILS_LIBDIR) -lopcodes -lbfd
+riscv32_gdbserver_LDADD = ../targets/libtargets.la             \
+                          ../trace/libtrace.la                 \
+                          @MDIR_RI5CY@/verilated.o             \
+                          @MDIR_RI5CY@/verilated_vcd_c.o       \
+                          @MDIR_RI5CY@/verilated_dpi.o         \
+                          @MDIR_RI5CY@/V@MODNAME_RI5CY@__ALL.a \
+                          -L$(BINUTILS_LIBDIR) -lopcodes -lbfd
 
-riscv_gdbserver_CPPFLAGS = -I$(top_srcdir)/targets          \
-                           -I$(top_srcdir)/targets/common   \
-                           -I$(top_srcdir)/targets/picorv32 \
-                           -I$(top_srcdir)/targets/ri5cy    \
-                           -I$(top_srcdir)/trace            \
-                           -I$(BINUTILS_INCDIR)
+riscv32_gdbserver_CPPFLAGS = -I$(top_srcdir)/targets          \
+                             -I$(top_srcdir)/targets/common   \
+                             -I$(top_srcdir)/targets/picorv32 \
+                             -I$(top_srcdir)/targets/ri5cy    \
+                             -I$(top_srcdir)/trace            \
+                             -I$(BINUTILS_INCDIR)
